kubernetes/apps/default/truenas/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
subsets:
- addresses:
  - ip: ${SECRET_NAS_IP}
  ports:
  - name: http
    port: 80
    protocol: TCP
