kubernetes/apps/default/truenas/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app truenas
spec:
  ingressClassName: internal
  rules:
  - host: &host nas.${SECRET_DOMAIN_INTERNAL}
    http:
      paths:
      - backend:
          service:
            name: truenas
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
